# raoc

./: .gitignore  .markdownlint.yaml  Cargo.toml  LICENSE  README.md
src/: day.rs  lib.rs  part.rs
src/template/: mod.rs  readme_benchmarks.rs  runner.rs
src/template/commands/: all.rs  scaffold.rs
