[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Thibault Cheneviere <thibault.cheneviere@telecomnancy.net>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
byte-unit = "5.0.3"
dhat = { git = "https://github.com/thibault-cne/dhat-rs.git", tag = "0.3.3" }
pico-args = "0.5.0"

[profile.release]
debug = 1
